# python-fundamentals-in-practice

./: .markdownlint.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  lychee.toml  pyproject.toml  skills.md
.claude/: CLAUDE.md
.clinerules/: AGENTS.md  README.md  agentic-core-context.md
.clinerules/agents/: agent-ci-verify.md  demo-roadmap-review.md  docs-originality-review.md  python-practice-code.md
.clinerules/rules/: 01-repository-purpose.md  02-educational-content-rules.md  03-repository-structure.md  04-quality-assurance.md  05-markdown-standards.md  07-reference-docs-rules.md  08-file-naming-conventions.md  README.md
.clinerules/skills/: README.md  agentic-engineering.md  ci-checks.md  demo-companions.md  docs-verification.md  e2e-testing.md  workspace-review.md
.clinerules/workflows/: demo-roadmap-review.md  run-ci-checks.md  session-roadmap-review.md  workspace-review.md
.cursor/agents/: docs-verifier.md  python-practice-code.md  session-content.md
.cursor/rules/: 01_educational-content-rules.mdc  02_repository-structure.mdc  03_quality-assurance.mdc  04_markdown-standards.mdc  05_primary-directives.mdc  06_cross-level-integration.mdc  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/instructions/: python-practice.instructions.md  session-docs.instructions.md
.github/prompts/: create-practice-file.prompt.md  create-session.prompt.md  fix-references.prompt.md  review-content.prompt.md
.github/workflows/: docs-quality.yml  python-quality.yml
.opencode/: README.md
docs/: 01_Python-Fundamentals-MasterPlan.md  02_RepositoryStructure.md
(+110 files in other folders)
