[project]
name = "python-fundamentals-in-practice"
version = "0.0.0"
description = "Educational Python curriculum (documentation + practice scripts; not a distributable package)."
requires-python = ">=3.13"
readme = "README.md"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort (import sorting)
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line length (handled by formatter preference; educational long lines in strings OK)
  "UP003",  # keep print(type(...)) in lessons — students must see type(), not only class names
  "W292",  # Preserve existing EOF-newline style in legacy lesson snippets
]

[tool.ruff.lint.isort]
known-first-party = []

[tool.ruff.lint.per-file-ignores]
"src/L1/S5/03_simple_calculator.py" = ["E402"]
"src/L1/S6/09_non_bool_values.py" = ["F541"]
